--- a/Higi.UI/Views/User/Index.cshtml
+++ b/Higi.UI/Views/User/Index.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>RabbitMQ Demo</title>
+    <title>Higi UI</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -36,24 +36,9 @@
         <div>
             <span class="text-info" id="send-status"></span>
         </div>
-        <hr />
-        <div style="height: 24px;"></div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <code id="received-message"></code>
-                    </div>
-                    <div class="panel-footer">
-                        <span class="text-info" id="receive-status"></span>
-                    </div>
-                </div>
-                <button type="button" class="btn btn-default" id="btn-get-message">Get Message</button>
-            </div>
-        </div>
     </div>
 
     <script src="https://unpkg.com/jquery@3.2.1"></script>
-    <script src="~/scripts/home.js"></script>
+    <script src="~/scripts/user.js"></script>
 </body>
 </html>
