--- a/CPS.UI/Views/Home/Index.cshtml
+++ b/CPS.UI/Views/Home/Index.cshtml
@@ -18,14 +18,21 @@
 <body>
     <div class="container">
         <div class="page-header">
-            <h1>CPS UI - Received User Data Update Messages</h1>
+            <h1>CPS UI - Notofocations</h1>
         </div>
         
+        <div id="notifications">
 
+        </div>
 
     </div>
 
     <script src="https://unpkg.com/jquery@3.2.1"></script>
+    @*<script src="~/Scripts/jquery-1.6.4.min.js"></script>*@
+    <script src="~/Scripts/jquery.signalR-2.2.1.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="~/signalr/hubs"></script>
     <script src="~/scripts/home.js"></script>
 </body>
 </html>
