Add data acess for the webjob and call endpoint based on user mappings.

--- a/CPS.UI/Views/Home/Index.cshtml
+++ b/CPS.UI/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <div class="page-header">
-            <h1>CPS UI - Notofocations</h1>
+            <h1>CPS UI - Notifications</h1>
         </div>
         
         <div id="notifications">
