--- a/Higi.UI/Views/Home/Index.cshtml
+++ b/Higi.UI/Views/Home/Index.cshtml
@@ -39,6 +39,6 @@
     </div>
 
     <script src="https://unpkg.com/jquery@3.2.1"></script>
-    <script src="~/scripts/user.js"></script>
+    <script src="~/scripts/home.js"></script>
 </body>
 </html>
